improved flags for JVM, ZGC in use